--- a/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
+++ b/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
@@ -1,5 +1,4 @@
-#原理图分三大类
-***
+# 原理图分三大类
 1. GPIO和门电路
     - 1.1 输入、输出引脚、上拉电阻、三极管
     - 1.2 与门、或门、非门
@@ -14,27 +13,32 @@
     - 3.2 不同位宽外设的接线、访问过程
     - 3.3 怎么确定访问地址、 设置内存控制器
 ***
-##上下拉电阻和引脚
-###三极管NPN
+## 上下拉电阻和引脚
+### 三极管NPN
 P:正
-![caption](pic/三级管PNP.png)
-###上拉电阻  
+![caption](./pic/三级管PNP.png)
+### 上拉电阻  
 ![caption](./pic/上拉电阻.png)
-###上拉电阻  
-<img src="pic/下拉电阻.png">  
-###中断引脚  
+### 上拉电阻  
+![caption](./pic/下拉电阻.png)
+### 中断引脚  
 1.有输入功能  
 2.可以中断cpu  
-<img src="pic/中断引脚.png">
-***  
-##门电路  
-###非门  
-<img src="pic/非门.png">  
-###与门  
-<img src="pic/与门.png">  
-###或门  
-<img src="pic/或门.png">  
-###与非门  
-<img src="pic/与非门.png">  
-###或非门  
-<img src="pic/或非门.png">  
+![caption](./pic/中断引脚.png)
+***
+
+## 门电路
+### 非门  
+![caption](./pic/非门.png)
+
+### 与门  
+![caption](./pic/与门.png)
+
+### 或门  
+![caption](./pic/或门.png)
+
+### 与非门  
+![caption](./pic/与非门.png)
+
+### 或非门  
+![caption](./pic/或非门.png)
