--- a/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
+++ b/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
@@ -19,7 +19,7 @@ P:正
 ![caption](./pic/三级管PNP.png)
 ### 上拉电阻  
 ![caption](./pic/上拉电阻.png)
-### 上拉电阻  
+### 下拉电阻  
 ![caption](./pic/下拉电阻.png)
 ### 中断引脚  
 1.有输入功能  
