--- a/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
+++ b/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
@@ -15,8 +15,8 @@
 ***
 ## 上下拉电阻和引脚
 ### 三极管NPN
-P:正
-![caption](./pic/三级管PNP.png)
+P:正  
+![caption](./pic/三极管.png)
 ### 上拉电阻  
 ![caption](./pic/上拉电阻.png)
 ### 下拉电阻  
