--- a/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
+++ b/韦东山嵌入式/1期_裸机实战/1.怎么看原理图之GPIO和门电路.md
@@ -14,10 +14,16 @@
         c.1 看2440手册弄清楚能设置哪些参数，这些参数的含义(以CLK为单位)  
         c.2 看外设芯片手册，弄清楚这些参数的取值范围(以秒为单位)  
         c.3 根据c.1,c.2计算2440的寄存器取值  
-3. 类似内存的接口
+3. 类似内存的接口: ram-like
     - 3.1 NOR、SDRAM、网卡
     - 3.2 不同位宽外设的接线、访问过程
     - 3.3 怎么确定访问地址、 设置内存控制器
+
+问1： 地址线、数据线上接有众多的设备，怎样做到只访问其中一个而避免其余的影响？  
+答：每一个芯片都有单独的片选引脚，访问它之前先设置片选引脚为低电平；其他芯片的片选引脚为高电平  
+问2： 是否需我们手动来设置片选引脚？  
+答：不需要。CPU访问某个地址时，CPU发出地址信号给“内存控制器”，内存控制器根据该地址决定让哪一个片选引脚输出低电平
+
 ***
 ## 上下拉电阻和引脚
 ### 三极管NPN
