--- a/韦东山嵌入式/1期_裸机实战/7.vi编辑器.md
+++ b/韦东山嵌入式/1期_裸机实战/7.vi编辑器.md
@@ -1,9 +1,9 @@
 # vi编辑器的使用
 一个编辑器具备的功能
 1. 打开文件、新建文件、保存文件  
-    1)vim 文件名  打开新建  
-    2)wq 保存退出  
-    3)q！ 强制退出，不保存  
+- 1)vim 文件名  打开新建  
+- 2)wq 保存退出  
+- 3)q！ 强制退出，不保存  
 2. 光标移动  
 - 1)h  左  
 - 2)j  下  
