--- a/韦东山嵌入式/1期_裸机实战/11.第1个ARM裸板程序及引申.md
+++ b/韦东山嵌入式/1期_裸机实战/11.第1个ARM裸板程序及引申.md
@@ -9,3 +9,36 @@
 2. 修改.bin二进制文件，点亮另一个灯
 ***
 # 进制 
+十进制：int a = 17;  
+二进制：int a = 0b10001;    
+八进制：int a = 021;  
+十六进制：int a = 0x11;    
+***
+# 字节序(大小端)
+int a = 0x12345678;  
+高地址----------->低地址  
+小端：0x12 0x34 0x56 0x78  
+大端：0x78 0x56 0x34 0x12  
+思考：如何编写一段代码判断当前机器是大端还是小端？  
+***
+# 位操作
+1. 移位  
+左移：<<  
+右移：>>
+2. 取反  
+~
+3. 位与  
+&  
+4. 位或  
+|  
+***
+# 置位操作
+int a = 0x123;  
+置位bit7 bit8  
+int b = a | (1 << 7) | (1 << 8)
+***
+# 清位操作  
+int a = 0x123;  
+清位bit7 bit8  
+int b = (a & ~(1 << 7)) & (~(1 << 8))
+
