--- a/韦东山嵌入式/1期_裸机实战/11.第1个ARM裸板程序及引申.md
+++ b/韦东山嵌入式/1期_裸机实战/11.第1个ARM裸板程序及引申.md
@@ -40,5 +40,6 @@ int b = a | (1 << 7) | (1 << 8)
 # 清位操作  
 int a = 0x123;  
 清位bit7 bit8  
-int b = (a & ~(1 << 7)) & (~(1 << 8))
-
+int b = (a & \~(1 << 7)) & (\~(1 << 8))
+***
+# 用C语言点灯
