--- a/韦东山嵌入式/1期_裸机实战/10.Source Ingsight使用.md
+++ b/韦东山嵌入式/1期_裸机实战/10.Source Ingsight使用.md
@@ -2,7 +2,7 @@
 1. 增加文件类型:  
 Options->Doucument Type(C source File)->File filter(*.c;*.h;*.S)
 2. 新建项目:  
-project->new project,然后将相信的文件夹添加到该项目中
+project->new project,然后将相应的文件夹添加到该项目中
 3. 字体设置(解决中文乱码)：  
 options->documents options中，将screen fonts设置为:宋体、常规、12、GB2312
 4. 说明一下source insight的窗口  
