--- a/韦东山嵌入式/1期_裸机实战/11.第1个ARM裸板程序及引申.md
+++ b/韦东山嵌入式/1期_裸机实战/11.第1个ARM裸板程序及引申.md
@@ -1,6 +1,27 @@
 # 点亮一个LED灯
 使用汇编点亮一个led    
+```
+.global __start
 
+__start:
+/* 点亮led:GPF4 */
+
+/* 配置GPF4为输出引脚 */
+/* 把0x100写到地址0x56000050 */
+	ldr r1, =0x56000050
+	ldr r0, =0x100 /* mov r0, #0x100 */
+	str r0, [r1]
+
+/* 配置GPF4为输出低电平 */
+/* 把0写到地址0x56000054 */
+	ldr r1, =0x56000054
+	ldr r0, =0 /* mov r0, #0 */
+	str r0, [r1]
+
+/* 死循环 */
+halt:
+	b halt
+```
 ***
 # 汇编码与机器码
 1. 修改.s汇编文件点亮另一个led灯
