--- a/韦东山嵌入式/1期_裸机实战/12.gcc和arm-linux-gcc和Makefile.md
+++ b/韦东山嵌入式/1期_裸机实战/12.gcc和arm-linux-gcc和Makefile.md
@@ -4,6 +4,7 @@ gcc [选项]  文件名
 gcc -v：查看gcc编译器的版本，显示gcc执行时的详细过程  
 gcc hello.c：输出一个a.out，然后./a.out来执行该应用程序  
 gcc -o hello hello.c：指定输出文件名为hello，不能跟源文件同名  
+gcc -M hello.c：查看hello.c依赖哪些头文件
 生成一个.out的详细过程？  
 1. 预处理:  
 gcc -E -o hello.i hello.c  
@@ -90,5 +91,68 @@ D = linux
 ```
 - export  
 # 5_Makefile函数  
+1. $(foreach var,list,text)  
+2. $(filter pattern...,text)  #在text中取出符合patern格式的值
+3. $(filter-out pattern...,text)  #在text中取出不符合patern格式的值
+4. $(wildcard pattern)  #pattern定义了文件名的格式，wildcard取出其中存在的文件  
+5. \$(patsubst pattern,replacement,$(var))  #从列表中取出每个值，如果符合pattern则替换为replacement
+```
+A = a b c
+B = $(foreach f, $(A), $(f).o)
+C = a b c d/
+D = $(filter %/, $(C))
+E = $(filter-out %/, $(C))
+files = $(wildcard *.c)
+files2 = 1.c 2.c 3.c 4.c 5.c 6.c abc
+files3 = $(wildcard $(files2))
+dep_files = $(patsubst %.c, %.d, $(files2))
 
+all:
+    @echo B = $(B)
+    @echo D = $(D)
+    @echo E = $(E)
+    @echo files = $(files)
+    @echo file3 = $(files3)
+    @echo dep_files = $(dep_files)
+------------------------------------------
+make执行结果：
+B = a.o b.o c.o
+D = d/
+E = a b c
+files = 1.c 2.c
+file3 = 1.c 2.c
+dep_files = 1.d 2.d 3.d 4.d 5.d 6.d abc
+```
 # 6_Makefile实例  
+1. 改进支持头文件依赖  
+gcc -M c.c //打印出依赖  
+gcc -M -MF c.d c.c //把依赖写入c.d  
+gcc -c -o c.o c.c  -MD -MF c.d //编译c.o,把依赖写入文件c.d  
+
+2. 添加CFLAGS  
+#指定编译选项，指定默认头文件搜索目录为当前目录.  
+CFLAGS = -Werror -I.
+```
+objs = a.o b.o c.o
+dep_files := $(patsubst %,.&.d, $(objs))
+dep_files := $(wildcard $(dep_files))
+
+#指定编译选项，指定默认头文件搜索目录为当前目录.
+CFLAGS = -Werror -I.
+
+test : $(objs)
+gcc -o test $^
+
+ifneq ($(dep_files), NULL)
+include $(dep_files)
+endif
+
+%.o : %.c
+    gcc $(CFLAGS) -c -o $@ $< -MD -MF .$@.d
+clean:
+    rm *.o test
+distclean:
+    rm .*.o.d
+
+.PHONY: clean
+```
