--- a/韦东山嵌入式/1期_裸机实战/12.gcc和arm-linux-gcc和Makefile.md
+++ b/韦东山嵌入式/1期_裸机实战/12.gcc和arm-linux-gcc和Makefile.md
@@ -21,7 +21,7 @@ gcc -o hello hello.o
 # 2_gcc编译器2_深入讲解链接过程  
 链接就是将汇编生成的OBJ文件、系统库的OBJ文件、库文件链接起来，最终生成可以在特定平台运行的可执行程序  
 -lc：链接libc库文件，其中libc库文件就实现了printf等函数  
--nostdlib：常用语逻裸机/bootloader、linux内核等程序，因为它们不需要启动文件、标准库文件  
+-nostdlib：常用于裸机/bootloader、linux内核等程序，因为它们不需要启动文件、标准库文件  
 动态链接：使用动态链接库进行链接，生成的程序在执行的时候需要加载所需的动态库才能运行。动态链接生成的程序体积较小，但是必须依赖所需的动态库，否则无法执行。  
 静态链接：使用静态链接库进行链接，生成的程序包含程序运行所需要的全部库，可以直接运行，不过静态链接生成的程序体积较大。  
 
